# saori-resized-png-mini

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: error.rs  image.rs  lib.rs  procedure.rs  resized_png.rs
src/image/: bmp.rs  gif.rs  jpeg.rs  png.rs  webp.rs
