[package]
name = "saori-resized-png-mini"
version = "1.0.0"
edition = "2021"
authors = [ "tukinami seika" ]
license = "MIT"
readme = "README.md"
description = "SAORI to resize image and save as png (limited edition)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resize = "0.7.4"
rgb = "0.8.36"
png = "0.17.7"
gif = "0.12.0"
jpeg-decoder = "0.3.0"
libwebp-sys = "0.8.0"
tinybmp = "0.4.0"
embedded-graphics = "0.7.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winbase", "libloaderapi", "stringapiset"]}

[dev-dependencies]
tempfile = "3.3.0"
encoding_rs = "0.8.31"

[lib]
name = "resizedpngmini"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
